2008-05-16 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.tcl: Refined check in right axis, remove any leftover information
                         (problem occurring with resizing - Francis Courtois)
        * plotaxis.tcl: Corrected mistake with drawing right axis (Francis Courtois)
        * plotaxis.tcl: Applied patch regarding ticklines with time axes (Nick Matthews)

2008-02-24 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * pkgIndex.tcl: Increased version number to 1.5.1, require Tcl/Tk 8.4
        * plotchart.man: Added plotpack command
        * plotchart.tcl: Added plotpack command
        * plotpack.tcl: Added plotpack command

2008-02-22 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * pkgIndex.tcl: Increased version number to 1.5, require Tcl/Tk 8.4
        * plotconfig.tcl: Added this file for configuring the plots
        * plotchart.tcl: Support for configuration command, also incorporated patch by Michael Baudin
        * plotaxis.tcl: Support for configuration command
        * plotpriv.tcl: Support for configuration command and graded bars in a barchart
        * scaling.tcl: Corrected optional argument to determineScale
        * plotdemos7.tcl: Added examples of configuring the plots
        * plotannot.tcl: Graded bars in a barchart

2008-01-25 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * pkgIndex.tcl: Corrected version number

2007-09-07 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.man: Added description of how to handle resizing
        * plotchart.tcl: Changed from [$w cget -width] to [winfo width $w]
        * plotpriv.tcl: Ditto

2007-06-19 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.man: Corrected syntax error

2007-06-16 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.man: Documented the createTXPlot method (for time-x plots)